<resources>
    <string name="app_name">Food Tracker</string>

    <string name="food_text">Food</string>
    <string name="comment_text">Comment</string>
    <string name="save_button">Save</string>
    <string name="item_by_day">See food by date</string>
    <string name="item_by_meal">See food by meal</string>
    <string name="item_by_search">Search</string>
    <string name="by_day_button">See food</string>
    <string name="by_meal_title">Select meal</string>
    <string name="main_page">Main page</string>
    <string name="delete_button">Delete this record</string>
    <string name="no_food_toast">You must enter a food</string>
    <string name="welcome_screen">Food Tracker</string>
    <string name="item_add_food">Record a food</string>
    <string name="search_hint">Search for a food</string>
    <string name="clear_all_button">Clear all saved data</string>
    <string name="item_week_summary">Week summary</string>


</resources>
