<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_main_page"
        android:title="@string/main_page" />
    <item
        android:id="@+id/item_by_day"
        android:title="@string/item_by_day" />
    <item
        android:id="@+id/item_by_meal"
        android:title="@string/item_by_meal" />
    <item
        android:id="@+id/item_by_search"
        android:title="@string/item_by_search" />
    <item
        android:id="@+id/item_delete_all"
        android:title="@string/clear_all_button" />
    <item
        android:id="@+id/item_week_summary"
        android:title="@string/item_week_summary" />
    <item
        android:id="@+id/item_add_food"
        android:title="@string/item_add_food" />
</menu>